// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Installations should render component when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.section
        classname=""
      >
        <mock-styled.h1
          classname=""
        >
          Installations
        </mock-styled.h1>
        <form>
          <mock-styled.div
            classname="el-mb11"
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="el-mb5"
                >
                  <mock-styled.input
                    classname=""
                    id="test-static-id"
                    placeholder="Search"
                  />
                  <mock-styled.span
                    classname=""
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 20 20"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m19.756 18.578-5.688-5.687a7.878 7.878 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0 3.552.001 0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.879 7.879 0 0 0 4.973-1.765l5.687 5.688a.831.831 0 0 0 1.179 0 .832.832 0 0 0 0-1.179Zm-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25Z"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                  <mock-styled.label
                    htmlfor="test-static-id"
                  >
                    Search Apps
                  </mock-styled.label>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.input
                    id="app-ids-select"
                    name="appIds"
                  />
                  <mock-styled.div
                    classname="el-mb5"
                  >
                    <mock-styled.span
                      classname="el-ml2 el-intent-default el-icon-new"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2ZM8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2Zm12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2Z"
                          fill="currentColor"
                        />
                      </svg>
                    </mock-styled.span>
                    <p>
                      No apps selected
                    </p>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label
                classname="el-flex el-mb3"
                htmlfor="developer-search-box"
              >
                Company
              </mock-styled.label>
              <mock-styled.div>
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <mock-styled.div>
                  <mock-styled.span
                    classname="el-intent-default el-icon-new"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  data-testid="search-input"
                  name="companyName"
                  placeholder="Search developer organisations"
                  value=""
                />
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label
                classname="el-flex el-mb3"
                htmlfor="client-search-box"
              >
                Client
              </mock-styled.label>
              <mock-styled.div>
                <input
                  id="client-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <mock-styled.div>
                  <mock-styled.span
                    classname="el-intent-default el-icon-new"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  data-testid="search-input"
                  name="clientId"
                  placeholder="Search customers"
                  value=""
                />
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="installedDateFrom"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Installed Date From
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="installedDateTo"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Installed Date To
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.label>
                  Is Charged Consumption
                </mock-styled.label>
                <mock-styled.div
                  classname="el-has-grey-bg"
                >
                  <mock-styled.input
                    id="option-consumption-all"
                    name="isChargedConsumption"
                    type="radio"
                    value=""
                  />
                  <mock-styled.label
                    classname="el-has-grey-bg"
                    htmlfor="option-consumption-all"
                  >
                    <mock-styled.span>
                      All
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="option-consumption-true"
                    name="isChargedConsumption"
                    type="radio"
                    value="true"
                  />
                  <mock-styled.label
                    classname="el-has-grey-bg"
                    htmlfor="option-consumption-true"
                  >
                    <mock-styled.span>
                      Charged
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="option-consumption-false"
                    name="isChargedConsumption"
                    type="radio"
                    value="false"
                  />
                  <mock-styled.label
                    classname="el-has-grey-bg"
                    htmlfor="option-consumption-false"
                  >
                    <mock-styled.span>
                      Free
                    </mock-styled.span>
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </form>
        <div
          class="el-mb11"
        >
          <mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.button
                classname="el-intent-primary"
                type="button"
              >
                <mock-styled.div />
                Download CSV
              </mock-styled.button>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.section>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.section
      classname=""
    >
      <mock-styled.h1
        classname=""
      >
        Installations
      </mock-styled.h1>
      <form>
        <mock-styled.div
          classname="el-mb11"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="el-mb5"
              >
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  placeholder="Search"
                />
                <mock-styled.span
                  classname=""
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m19.756 18.578-5.688-5.687a7.878 7.878 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0 3.552.001 0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.879 7.879 0 0 0 4.973-1.765l5.687 5.688a.831.831 0 0 0 1.179 0 .832.832 0 0 0 0-1.179Zm-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25Z"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Search Apps
                </mock-styled.label>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="app-ids-select"
                  name="appIds"
                />
                <mock-styled.div
                  classname="el-mb5"
                >
                  <mock-styled.span
                    classname="el-ml2 el-intent-default el-icon-new"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2ZM8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2Zm12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2Z"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                  <p>
                    No apps selected
                  </p>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label
              classname="el-flex el-mb3"
              htmlfor="developer-search-box"
            >
              Company
            </mock-styled.label>
            <mock-styled.div>
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <mock-styled.div>
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div
                data-testid="search-input"
                name="companyName"
                placeholder="Search developer organisations"
                value=""
              />
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label
              classname="el-flex el-mb3"
              htmlfor="client-search-box"
            >
              Client
            </mock-styled.label>
            <mock-styled.div>
              <input
                id="client-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <mock-styled.div>
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div
                data-testid="search-input"
                name="clientId"
                placeholder="Search customers"
                value=""
              />
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="installedDateFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Installed Date From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="installedDateTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Installed Date To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Is Charged Consumption
              </mock-styled.label>
              <mock-styled.div
                classname="el-has-grey-bg"
              >
                <mock-styled.input
                  id="option-consumption-all"
                  name="isChargedConsumption"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-consumption-true"
                  name="isChargedConsumption"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-true"
                >
                  <mock-styled.span>
                    Charged
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-consumption-false"
                  name="isChargedConsumption"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-false"
                >
                  <mock-styled.span>
                    Free
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
      <div
        class="el-mb11"
      >
        <mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.button
              classname="el-intent-primary"
              type="button"
            >
              <mock-styled.div />
              Download CSV
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Installations should render component with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.section
        classname=""
      >
        <mock-styled.h1
          classname=""
        >
          Installations
        </mock-styled.h1>
        <form>
          <mock-styled.div
            classname="el-mb11"
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="el-mb5"
                >
                  <mock-styled.input
                    classname=""
                    id="test-static-id"
                    placeholder="Search"
                  />
                  <mock-styled.span
                    classname=""
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 20 20"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m19.756 18.578-5.688-5.687a7.878 7.878 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0 3.552.001 0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.879 7.879 0 0 0 4.973-1.765l5.687 5.688a.831.831 0 0 0 1.179 0 .832.832 0 0 0 0-1.179Zm-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25Z"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                  <mock-styled.label
                    htmlfor="test-static-id"
                  >
                    Search Apps
                  </mock-styled.label>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.input
                    id="app-ids-select"
                    name="appIds"
                  />
                  <mock-styled.div
                    classname="el-mb5"
                  >
                    <mock-styled.span
                      classname="el-ml2 el-intent-default el-icon-new"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2ZM8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2Zm12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2Z"
                          fill="currentColor"
                        />
                      </svg>
                    </mock-styled.span>
                    <p>
                      No apps selected
                    </p>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label
                classname="el-flex el-mb3"
                htmlfor="developer-search-box"
              >
                Company
              </mock-styled.label>
              <mock-styled.div>
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <mock-styled.div>
                  <mock-styled.span
                    classname="el-intent-default el-icon-new"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  data-testid="search-input"
                  name="companyName"
                  placeholder="Search developer organisations"
                  value=""
                />
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label
                classname="el-flex el-mb3"
                htmlfor="client-search-box"
              >
                Client
              </mock-styled.label>
              <mock-styled.div>
                <input
                  id="client-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <mock-styled.div>
                  <mock-styled.span
                    classname="el-intent-default el-icon-new"
                    style="font-size: 1rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      style="font-size: 1rem;"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  data-testid="search-input"
                  name="clientId"
                  placeholder="Search customers"
                  value=""
                />
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="installedDateFrom"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Installed Date From
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="installedDateTo"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Installed Date To
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.label>
                  Is Charged Consumption
                </mock-styled.label>
                <mock-styled.div
                  classname="el-has-grey-bg"
                >
                  <mock-styled.input
                    id="option-consumption-all"
                    name="isChargedConsumption"
                    type="radio"
                    value=""
                  />
                  <mock-styled.label
                    classname="el-has-grey-bg"
                    htmlfor="option-consumption-all"
                  >
                    <mock-styled.span>
                      All
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="option-consumption-true"
                    name="isChargedConsumption"
                    type="radio"
                    value="true"
                  />
                  <mock-styled.label
                    classname="el-has-grey-bg"
                    htmlfor="option-consumption-true"
                  >
                    <mock-styled.span>
                      Charged
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="option-consumption-false"
                    name="isChargedConsumption"
                    type="radio"
                    value="false"
                  />
                  <mock-styled.label
                    classname="el-has-grey-bg"
                    htmlfor="option-consumption-false"
                  >
                    <mock-styled.span>
                      Free
                    </mock-styled.span>
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </form>
        <div
          class="el-mb11"
        >
          <mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.button
                classname="el-intent-primary"
                type="button"
              >
                <mock-styled.div />
                Download CSV
              </mock-styled.button>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <mock-styled.div
          classname="el-mb11"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="8"
        >
          <mock-styled.div>
            <mock-styled.div>
              Customer Name
            </mock-styled.div>
            <mock-styled.div>
              App Name
            </mock-styled.div>
            <mock-styled.div>
              Reapit Customer Code
            </mock-styled.div>
            <mock-styled.div>
              Customer Address
            </mock-styled.div>
            <mock-styled.div>
              Date Installed
            </mock-styled.div>
            <mock-styled.div>
              Installed By
            </mock-styled.div>
            <mock-styled.div>
              Date Uninstalled
            </mock-styled.div>
            <mock-styled.div>
              Uninstalled By
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname="el-intent-default el-icon-new"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.21 7.21 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.47 7.47 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.48 6.48 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.209 7.209 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27l-2.06-1.85ZM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.span
                  classname="el-intent-default"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1.25rem;"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#flatInfographic_svg__a)"
                    >
                      <path
                        d="M20 20h-9V4h9v16Z"
                        fill="#d8dee4"
                      />
                      <path
                        d="M13 2h-1v18h1V2ZM1.28 0v1.787H0V20h12V0H1.28Z"
                        fill="#798da1"
                      />
                      <path
                        d="M5.149 4.505H3.617V6.38H5.15V4.505ZM8.962 4.505H7.43V6.38h1.532V4.505ZM3.617 8.255H5.15v1.875H3.617V8.255ZM8.962 8.255H7.43v1.875h1.532V8.255ZM3.617 12.006H5.15v1.875H3.617v-1.875ZM8.962 12.006H7.43v1.875h1.532v-1.875ZM3.617 15.756H5.15v1.875H3.617v-1.875ZM8.962 15.756H7.43v1.875h1.532v-1.875Z"
                        fill="#fff"
                      />
                      <path
                        d="M16.281 8.255h-1.532v1.875h1.532V8.255ZM16.281 12.006h-1.532v1.875h1.532v-1.875Z"
                        fill="#798da1"
                      />
                    </g>
                    <defs>
                      <clippath
                        id="flatInfographic_svg__a"
                      >
                        <path
                          d="M0 0h20v20H0z"
                          fill="#fff"
                        />
                      </clippath>
                    </defs>
                  </svg>
                </mock-styled.span>
                <mock-styled.div
                  data-narrow-label="Customer Name"
                >
                  Sandbox Estates
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.span
                  classname="el-intent-default"
                  style="font-size: 1.25rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1.25rem;"
                    viewBox="0 0 40 40"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M19.833 2h15.334C37.28 2 39 3.615 39 5.6v28.8c0 1.985-1.72 3.6-3.833 3.6H19.833C17.72 38 16 36.385 16 34.4V5.6C16 3.615 17.72 2 19.833 2Z"
                      fill="#d8dee4"
                      fill-rule="evenodd"
                    />
                    <path
                      d="M27.948 35.27c1.126 0 2.038-.895 2.038-2 0-1.104-.912-2-2.038-2s-2.038.896-2.038 2c0 1.105.912 2 2.038 2Z"
                      fill="#798da1"
                    />
                    <path
                      d="M18 14h15.558c.797 0 1.442.63 1.442 1.408v9.184C35 25.37 34.355 26 33.557 26H18V14Z"
                      fill="#9faebc"
                    />
                    <path
                      d="M21 7.403v25.194c0 1.155-1.35 1.814-2.294 1.12L1.572 21.118a1.381 1.381 0 0 1 0-2.238L18.707 6.284C19.65 5.589 21 6.248 21 7.403Z"
                      fill="#9faebc"
                    />
                    <path
                      d="M31 4h-4a1 1 0 1 0 0 2h4a1 1 0 1 0 0-2ZM24 6a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
                      fill="#798da1"
                    />
                  </svg>
                </mock-styled.span>
                <mock-styled.div
                  data-narrow-label="App Name"
                >
                  App Test Name
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.div
                  data-narrow-label="Reapit Customer Code"
                >
                  SBOX
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.div
                  data-narrow-label="Customer Address"
                >
                  67-74 Third Floor Saffron Hill London EC1N 8QX
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.div
                  data-narrow-label="Date Installed"
                >
                  23-03-2022
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.div
                  data-narrow-label="Installed By"
                >
                  test@example.com
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.div
                  data-narrow-label="Date Uninstalled"
                >
                  -
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
              >
                <mock-styled.div
                  data-narrow-label="Uninstalled By"
                />
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="el-button-group-align-center"
                  >
                    <mock-styled.button
                      classname="el-intent-primary"
                    >
                      <mock-styled.div />
                      Togggle API Consumption
                    </mock-styled.button>
                    <mock-styled.button
                      classname="el-intent-danger"
                      disabled="false"
                    >
                      <mock-styled.div />
                      Uninstall
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.button
            data-testid="back-button"
            type="button"
          >
            <mock-styled.span
              classname="el-icon-new"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.495 20.004a.998.998 0 0 1-.709-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71Z"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.button>
          <mock-styled.div>
            <mock-styled.input
              value="1"
            />
             of 
            1
          </mock-styled.div>
          <mock-styled.button
            data-testid="forward-button"
            type="button"
          >
            <mock-styled.span
              classname="el-icon-new"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.505 20.004a.998.998 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1.002 1.002 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a.998.998 0 0 1-.71.29Z"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.section>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.section
      classname=""
    >
      <mock-styled.h1
        classname=""
      >
        Installations
      </mock-styled.h1>
      <form>
        <mock-styled.div
          classname="el-mb11"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="el-mb5"
              >
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  placeholder="Search"
                />
                <mock-styled.span
                  classname=""
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m19.756 18.578-5.688-5.687a7.878 7.878 0 0 0 1.765-4.973C15.833 3.553 12.281 0 7.917 0 3.552.001 0 3.553 0 7.918s3.552 7.916 7.917 7.916a7.879 7.879 0 0 0 4.973-1.765l5.687 5.688a.831.831 0 0 0 1.179 0 .832.832 0 0 0 0-1.179Zm-11.84-4.41a6.256 6.256 0 0 1-6.25-6.25 6.256 6.256 0 0 1 6.25-6.25 6.256 6.256 0 0 1 6.25 6.25 6.256 6.256 0 0 1-6.25 6.25Z"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Search Apps
                </mock-styled.label>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="app-ids-select"
                  name="appIds"
                />
                <mock-styled.div
                  classname="el-mb5"
                >
                  <mock-styled.span
                    classname="el-ml2 el-intent-default el-icon-new"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2ZM8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2Zm12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2Z"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                  <p>
                    No apps selected
                  </p>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label
              classname="el-flex el-mb3"
              htmlfor="developer-search-box"
            >
              Company
            </mock-styled.label>
            <mock-styled.div>
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <mock-styled.div>
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div
                data-testid="search-input"
                name="companyName"
                placeholder="Search developer organisations"
                value=""
              />
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label
              classname="el-flex el-mb3"
              htmlfor="client-search-box"
            >
              Client
            </mock-styled.label>
            <mock-styled.div>
              <input
                id="client-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <mock-styled.div>
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  style="font-size: 1rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    style="font-size: 1rem;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m21.71 20.29-5.4-5.39A7.9 7.9 0 0 0 18 10a8 8 0 1 0-8 8 7.9 7.9 0 0 0 4.9-1.69l5.39 5.4a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42ZM4 10a6 6 0 1 1 12 0 6 6 0 0 1-12 0Z"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div
                data-testid="search-input"
                name="clientId"
                placeholder="Search customers"
                value=""
              />
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="installedDateFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Installed Date From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="installedDateTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Installed Date To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Is Charged Consumption
              </mock-styled.label>
              <mock-styled.div
                classname="el-has-grey-bg"
              >
                <mock-styled.input
                  id="option-consumption-all"
                  name="isChargedConsumption"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-consumption-true"
                  name="isChargedConsumption"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-true"
                >
                  <mock-styled.span>
                    Charged
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-consumption-false"
                  name="isChargedConsumption"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="el-has-grey-bg"
                  htmlfor="option-consumption-false"
                >
                  <mock-styled.span>
                    Free
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
      <div
        class="el-mb11"
      >
        <mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.button
              classname="el-intent-primary"
              type="button"
            >
              <mock-styled.div />
              Download CSV
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </div>
      <mock-styled.div
        classname="el-mb11"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="8"
      >
        <mock-styled.div>
          <mock-styled.div>
            Customer Name
          </mock-styled.div>
          <mock-styled.div>
            App Name
          </mock-styled.div>
          <mock-styled.div>
            Reapit Customer Code
          </mock-styled.div>
          <mock-styled.div>
            Customer Address
          </mock-styled.div>
          <mock-styled.div>
            Date Installed
          </mock-styled.div>
          <mock-styled.div>
            Installed By
          </mock-styled.div>
          <mock-styled.div>
            Date Uninstalled
          </mock-styled.div>
          <mock-styled.div>
            Uninstalled By
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="el-intent-default el-icon-new"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.21 7.21 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.47 7.47 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.48 6.48 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.209 7.209 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27l-2.06-1.85ZM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
            >
              <mock-styled.span
                classname="el-intent-default"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  style="font-size: 1.25rem;"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#flatInfographic_svg__a)"
                  >
                    <path
                      d="M20 20h-9V4h9v16Z"
                      fill="#d8dee4"
                    />
                    <path
                      d="M13 2h-1v18h1V2ZM1.28 0v1.787H0V20h12V0H1.28Z"
                      fill="#798da1"
                    />
                    <path
                      d="M5.149 4.505H3.617V6.38H5.15V4.505ZM8.962 4.505H7.43V6.38h1.532V4.505ZM3.617 8.255H5.15v1.875H3.617V8.255ZM8.962 8.255H7.43v1.875h1.532V8.255ZM3.617 12.006H5.15v1.875H3.617v-1.875ZM8.962 12.006H7.43v1.875h1.532v-1.875ZM3.617 15.756H5.15v1.875H3.617v-1.875ZM8.962 15.756H7.43v1.875h1.532v-1.875Z"
                      fill="#fff"
                    />
                    <path
                      d="M16.281 8.255h-1.532v1.875h1.532V8.255ZM16.281 12.006h-1.532v1.875h1.532v-1.875Z"
                      fill="#798da1"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="flatInfographic_svg__a"
                    >
                      <path
                        d="M0 0h20v20H0z"
                        fill="#fff"
                      />
                    </clippath>
                  </defs>
                </svg>
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Customer Name"
              >
                Sandbox Estates
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
            >
              <mock-styled.span
                classname="el-intent-default"
                style="font-size: 1.25rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  style="font-size: 1.25rem;"
                  viewBox="0 0 40 40"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M19.833 2h15.334C37.28 2 39 3.615 39 5.6v28.8c0 1.985-1.72 3.6-3.833 3.6H19.833C17.72 38 16 36.385 16 34.4V5.6C16 3.615 17.72 2 19.833 2Z"
                    fill="#d8dee4"
                    fill-rule="evenodd"
                  />
                  <path
                    d="M27.948 35.27c1.126 0 2.038-.895 2.038-2 0-1.104-.912-2-2.038-2s-2.038.896-2.038 2c0 1.105.912 2 2.038 2Z"
                    fill="#798da1"
                  />
                  <path
                    d="M18 14h15.558c.797 0 1.442.63 1.442 1.408v9.184C35 25.37 34.355 26 33.557 26H18V14Z"
                    fill="#9faebc"
                  />
                  <path
                    d="M21 7.403v25.194c0 1.155-1.35 1.814-2.294 1.12L1.572 21.118a1.381 1.381 0 0 1 0-2.238L18.707 6.284C19.65 5.589 21 6.248 21 7.403Z"
                    fill="#9faebc"
                  />
                  <path
                    d="M31 4h-4a1 1 0 1 0 0 2h4a1 1 0 1 0 0-2ZM24 6a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
                    fill="#798da1"
                  />
                </svg>
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="App Name"
              >
                App Test Name
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
            >
              <mock-styled.div
                data-narrow-label="Reapit Customer Code"
              >
                SBOX
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
            >
              <mock-styled.div
                data-narrow-label="Customer Address"
              >
                67-74 Third Floor Saffron Hill London EC1N 8QX
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
            >
              <mock-styled.div
                data-narrow-label="Date Installed"
              >
                23-03-2022
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
            >
              <mock-styled.div
                data-narrow-label="Installed By"
              >
                test@example.com
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
            >
              <mock-styled.div
                data-narrow-label="Date Uninstalled"
              >
                -
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-table-cell-has-dark-text"
            >
              <mock-styled.div
                data-narrow-label="Uninstalled By"
              />
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="el-intent-default el-icon-new"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4ZM19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="el-button-group-align-center"
                >
                  <mock-styled.button
                    classname="el-intent-primary"
                  >
                    <mock-styled.div />
                    Togggle API Consumption
                  </mock-styled.button>
                  <mock-styled.button
                    classname="el-intent-danger"
                    disabled="false"
                  >
                    <mock-styled.div />
                    Uninstall
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.button
          data-testid="back-button"
          type="button"
        >
          <mock-styled.span
            classname="el-icon-new"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.495 20.004a.998.998 0 0 1-.709-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71Z"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
        <mock-styled.div>
          <mock-styled.input
            value="1"
          />
           of 
          1
        </mock-styled.div>
        <mock-styled.button
          data-testid="forward-button"
          type="button"
        >
          <mock-styled.span
            classname="el-icon-new"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.505 20.004a.998.998 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1.002 1.002 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a.998.998 0 0 1-.71.29Z"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
